to be use of a NULL central cache instead of a local memory central
cache. There also seemed to be no usage of this submodel.

----------
mcadler     Date: Thu Apr  8 17:48:14 EDT 2010  CSN: CSN-platforms-391
                  Thu Apr  8 21:48:14 UTC 2010


Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/memory/hybrid
 hybrid-mem-scratch.bsv    Locally Modified          390 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/clocks/simulation
 sim-clocks-device.awb     Locally Modified          390 

- Make the default simulation clock ration 1:1
- Tweak debugging message in scratchpad.

----------
kfleming    Date: Fri Apr  9 19:18:55 EDT 2010  CSN: CSN-platforms-394
                  Fri Apr  9 23:18:55 UTC 2010


Directory modules/project
 SCons.top.pipeline.template Locally Modified          393 
 Synplify.py               Locally Modified          393 
 ModuleList.py             Locally Modified          393 
 SCons.top.template        Locally Modified          393 

Changes to support the moving names of the new types command.  

I have tested this pretty heavily, but there could still be bugs.  

----------
kfleming    Date: Mon Apr 12 17:04:33 EDT 2010  CSN: CSN-platforms-397
                  Mon Apr 12 21:04:33 UTC 2010


Directory modules/project
 Synplify.py               Locally Modified          396 
 XST.py                    Locally Modified          396 


Added support for patching XST mishandling of Bluespec's inout naming
syntax. This enables us to unify ucf syntax across tools.

----------
kfleming    Date: Thu Apr 15 15:42:53 EDT 2010  CSN: CSN-platforms-402
                  Thu Apr 15 19:42:53 UTC 2010


Directory modules/bluespec/common/fpgaenv/physical-platform/htg_virtex5/pcie-enabled
 xilinx.sdf                Locally Modified          401 
 htg-v5-pcie-enabled.sdc   Locally Modified          401 

Fixed some Synplify synthesis parameters