@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-402
+CSN=CSN-platforms-406
 Dependencies=hasim/HEAD
